--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -77,3 +77,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/Engine.AudioSettings]
+DefaultSoundClassName=/Game/Sounds/Settings/SC_Master.SC_Master
+
