--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -79,4 +79,5 @@ ManualIPAddress=
 
 [/Script/Engine.AudioSettings]
 DefaultSoundClassName=/Game/Sounds/Settings/SC_Master.SC_Master
+DefaultBaseSoundMix=/Game/Sounds/Settings/SMix_Default.SMix_Default
 
