--- a/.gitignore
+++ b/.gitignore
@@ -66,4 +66,5 @@ Plugins/*/Intermediate/*
 # Cache files for the editor to use
 DerivedDataCache/*
 
-ShootThemUp.sln.DotSettings.user
+# Rider
+.idea/
